# MojeSaldoo-App

./: .containerignore  .gitignore  Analysis and Development Plan.md  Makefile  PLAN.md  PROJECT.md  README.md  STARTUP_VALIDATION.md  Steps.md  TODO.md  WAREHOUSE_FLOW_ANALYSIS.md  compose.yml  failed-tests.md  package-lock.json  package.json
backend/: Makefile  SECURITY_REVIEW.md  manage.py  pyproject.toml  requirements.txt
backend/apps/activity/: admin.py  error_codes.py  exceptions.py  log.py  middleware.py  models.py  tests.py  urls.py  views.py
backend/apps/common/: serializers.py
backend/apps/cost_allocation/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/customers/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/delivery/: admin.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/fixed_costs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/inventory/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/invoices/: filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/ksef/: crypto.py  models.py  ssapi_client.py  tests.py  urls.py  views.py  xml_generator.py
backend/apps/mojesaldoo_backend/: settings.py  settings_production.py  urls.py
backend/apps/orders/: apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  (+1 more)
backend/config/: asgi.py  settings.py  settings_production.py  tests.py  urls.py  wsgi.py
backend/customers/: views.py
backend/invoices/: models.py  serializers.py
backend/mojesaldoo_backend/: asgi.py  wsgi.py
backend/orders/: models.py
backend/products/: models.py  views.py
backend/users/: models.py  views.py
(+489 files in other folders)
